--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.1"
 services:
   galeria:
     container_name: galeria
-    image: jtorcab/test:latest
+    image: jtorcab/galeria:latest
     ports:
       - 80:5000
     restart: always
